--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 [v-cloak] {
 	display: none;
 }
@@ -20,14 +19,17 @@ i {
 }
 
 #click-menu {
-	display: none;
 	position: absolute;
-	opacity: 1;
+	z-index: 10;
 }
 
 #click-menu > div {
 	position: absolute;
 	transform: translate(-12px, -12px);
+}
+
+#click-menu i:hover {
+	text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff;
 }
 
 #click-menu > #center {
@@ -68,7 +70,7 @@ i {
 
 .hex:hover {
 	cursor: pointer;
-	opacity: 0.75;
+	/* opacity: 0.75; https://stackoverflow.com/questions/5770341/i-do-not-want-to-inherit-the-child-opacity-from-the-parent-in-css */
 }
 
 .hex,
